--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,12 @@
 @import url(/assets/css/reset.css);
 @import url(/assets/css/fonts.css);
 @import url(/assets/css/common.css);
+
+.header-top {
+
+    background-color: #f5f5f5;
+}
+
+.header-top .inner {}
+
+.top-banner {}
