--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,46 @@
 .mainSwiper {
     overflow: hidden;
     position: relative;
-    height: 460px;
+    height: 640px;
 }
 
 .mainSwiper .slide-txt {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-family: 'GmarketSans';
+    margin: 0 auto;
+    padding: 0px 0 0 6%;
+}
+
+.mainSwiper .slide-txt .txt-tit {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.15;
+    letter-spacing: -1.5px;
     font-family: 'GmarketSans';
 }
 
-.swiper-pagination-bullet {
+.mainSwiper .slide-txt .txt-desc {
+    padding-top: 35px;
+    font-size: 23.5px;
+    line-height: 1.35;
+    letter-spacing: -0.85px;
+    font-weight: 100;
+    font-family: 'GmarketSans';
+}
+
+.mainSwiper .swiper-slide img {
+    height: 100%
+}
+
+.mainSwiper .swiper-pagination-bullet {
     background: none;
     width: 50px;
+    color: #fff;
+    font-weight: bold;
+}
+
+.mainSwiper .swiper-pagination {
+    bottom: 30px;
 }
